Active users functionality added